Add localhost to production CORS